# personality-factors-segmentation

./: README.md  personality-factors-segmentation.ipynb  program.py  pyproject.toml
